# hyperspot

./: CHANGELOG.md  Cargo.toml
dylint_lints/: Cargo.toml  README.md
dylint_lints/de01_contract_layer/de0101_no_serde_in_contract/: Cargo.toml
dylint_lints/de01_contract_layer/de0110_no_schema_for_on_gts_structs/: Cargo.toml
dylint_lints/de02_api_layer/de0203_dtos_must_have_serde_derives/: Cargo.toml
dylint_lints/de02_api_layer/de0204_dtos_must_have_toschema_derive/: Cargo.toml
dylint_lints/de02_api_layer/de0205_dtos_must_use_snake_case_rename_all/: Cargo.toml  README.md
dylint_lints/de02_api_layer/de0205_dtos_must_use_snake_case_rename_all/src/: lib.rs
dylint_lints/de02_api_layer/de0205_dtos_must_use_snake_case_rename_all/ui/: fail_camel_case.rs  fail_camel_case.stderr  fail_field_camel_case.rs  fail_field_camel_case.stderr  fail_field_kebab_case.rs  fail_field_kebab_case.stderr  fail_field_pascal_case.rs  fail_field_pascal_case.stderr  fail_field_screaming_kebab_case.rs  fail_field_screaming_kebab_case.stderr  fail_field_screaming_snake_case.rs  fail_field_screaming_snake_case.stderr  fail_field_uppercase.rs  fail_field_uppercase.stderr  fail_kebab_case.rs  fail_kebab_case.stderr  fail_lowercase.rs  fail_lowercase.stderr  fail_pascal_case.rs  fail_pascal_case.stderr  fail_screaming_kebab_case.rs  fail_screaming_kebab_case.stderr  fail_screaming_snake_case.rs  fail_screaming_snake_case.stderr  fail_uppercase.rs  fail_uppercase.stderr  pass_field_lowercase.rs  pass_field_snake_case.rs  pass_outside_api.rs
dylint_lints/de08_rest_api_conventions/de0803_api_problem_details/: Cargo.toml  README.md
dylint_lints/de08_rest_api_conventions/de0803_api_problem_details/src/: lib.rs
dylint_lints/de08_rest_api_conventions/de0803_api_problem_details/ui/: json_error_404.rs  json_error_404.stderr  json_error_500.rs  json_error_500.stderr  problem_response.rs
dylint_lints/de08_rest_api_conventions/de0804_api_endpoint_summary/: Cargo.toml  README.md
dylint_lints/de08_rest_api_conventions/de0804_api_endpoint_summary/src/: lib.rs
dylint_lints/de08_rest_api_conventions/de0804_api_endpoint_summary/ui/: has_summary.rs  missing_summary.rs  missing_summary.stderr
dylint_lints/de08_rest_api_conventions/de0805_api_snake_case/: Cargo.toml  README.md
dylint_lints/de08_rest_api_conventions/de0805_api_snake_case/src/: lib.rs
dylint_lints/de08_rest_api_conventions/de0805_api_snake_case/ui/: fail_camel_case.rs  fail_camel_case.stderr  fail_field_camel_case.rs  fail_field_camel_case.stderr  fail_field_kebab_case.rs  fail_field_kebab_case.stderr  fail_field_pascal_case.rs  fail_field_pascal_case.stderr  fail_field_screaming_kebab_case.rs  fail_field_screaming_kebab_case.stderr  fail_field_screaming_snake_case.rs  fail_field_screaming_snake_case.stderr  fail_field_uppercase.rs  fail_field_uppercase.stderr  fail_kebab_case.rs  fail_kebab_case.stderr  fail_lowercase.rs  fail_lowercase.stderr  fail_pascal_case.rs  fail_pascal_case.stderr  fail_screaming_kebab_case.rs  fail_screaming_kebab_case.stderr  fail_screaming_snake_case.rs  fail_screaming_snake_case.stderr  fail_uppercase.rs  fail_uppercase.stderr  pass_field_lowercase.rs  pass_field_snake_case.rs  pass_outside_api.rs
dylint_lints/de09_gts_layer/de0901_gts_string_pattern/: Cargo.toml
dylint_lints/de09_gts_layer/de0902_no_schema_for_on_gts_structs/: Cargo.toml
libs/system-sdks/: Cargo.toml
libs/system-sdks/sdks/directory/: Cargo.toml
