[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Hypernetix"]
repository = "https://github.com/hypernetix/hyperspot"
description = "HyperSpot Server"

[workspace]
members = [
    "apps/hyperspot-server",
    "libs/modkit",
    "libs/modkit-macros",
    "libs/modkit-db",
    "libs/modkit-db-macros",
    "libs/modkit-auth",
    "libs/modkit-sdk",
    "libs/modkit-sdk-macros",
    "libs/modkit-security",
    "libs/modkit-errors",
    "libs/modkit-errors-macro",
    "libs/modkit-odata",
    "libs/modkit-node-info",
    "libs/modkit-transport-grpc",
    "libs/modkit-utils",
    "modules/system/api_gateway",
    "modules/system/grpc_hub",
    "modules/file_parser",
    "modules/system/nodes_registry",
    "modules/system/module_orchestrator/module_orchestrator-contracts",
    "modules/system/module_orchestrator/module_orchestrator-grpc",
    "modules/system/module_orchestrator/module_orchestrator",
    "examples/modkit/users_info/user_info-sdk",
    "examples/modkit/users_info/users_info",
    "examples/oop-modules/calculator_gateway/calculator_gateway-sdk",
    "examples/oop-modules/calculator_gateway/calculator_gateway",
    "examples/oop-modules/calculator/calculator-sdk",
    "examples/oop-modules/calculator/calculator",
    "modules/system/types-registry/types-registry-sdk",
    "modules/system/types-registry/types-registry",
    "examples/plugin-modules/tenant_resolver/tenant_resolver-sdk",
    "examples/plugin-modules/tenant_resolver/tenant_resolver-gw",
    "examples/plugin-modules/tenant_resolver/plugins/contoso_tr_plugin",
    "examples/plugin-modules/tenant_resolver/plugins/fabrikam_tr_plugin"
]
resolver = "2"

# Note: dylint_lints is a separate workspace for custom linters
# See dylint_lints/README.md for usage instructions

[workspace.lints.rust]
deprecated = "warn"
non_ascii_idents = "forbid"
unsafe_code = "forbid"
unused_mut = "warn"
noop_method_call = "warn"
unused_import_braces = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
# See clippy rules details https://rust-lang.github.io/rust-clippy/master/index.html
# Here will be workspace global rules
pedantic = { level = "deny", priority = -1 }
async_yields_async = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
clone_on_copy = "deny"
cognitive_complexity = "deny"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
default_trait_access = "deny"
doc_link_with_quotes = "deny"
doc_markdown = "deny"
elidable_lifetime_names = "deny"
empty_line_after_outer_attr = "deny"
empty_structs_with_brackets = "deny"
enum_glob_use = "deny"
expect_used = "deny"
explicit_iter_loop = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
format_push_string = "deny"
if_not_else = "deny"
ignore_without_reason = "deny"
ignored_unit_patterns = "deny"
implicit_clone = "deny"
items_after_statements = "deny"
implicit_hasher = "deny"
inefficient_to_string = "deny"
integer_division = "deny"
ip_constant = "deny"
lossy_float_literal = "deny"
manual_assert = "deny"
manual_let_else = "deny"
manual_string_new = "deny"
many_single_char_names = "deny"
map_clone = "deny"
map_unwrap_or = "deny"
match_same_arms = "deny"
match_wildcard_for_single_variants = "deny"
missing_errors_doc = "deny"
missing_fields_in_debug = "deny"
missing_panics_doc = "deny"
must_use_candidate = "deny"
mutex_atomic = "deny"
needless_borrow = "deny"
needless_lifetimes = "deny"
needless_pass_by_value = "deny"
no_effect_underscore_binding = "deny"
non_ascii_literal = "deny"
non_std_lazy_statics = "deny"
option_as_ref_cloned = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "deny"
ref_option = "deny"
regex_creation_in_loops = "deny"
return_self_not_must_use = "deny"
semicolon_if_nothing_returned = "deny"
single_char_pattern= "deny"
similar_names = "deny"
single_match_else = "deny"
struct_excessive_bools = "deny"
suspicious_operation_groupings = "deny"
too_many_lines = "deny"
trivially_copy_pass_by_ref = "deny"
type_complexity = "deny"
unchecked_time_subtraction = "deny"
unnecessary_debug_formatting = "deny"
uninlined_format_args = "deny"
unnecessary_literal_bound = "deny"
unnecessary_wraps = "deny"
unnested_or_patterns = "deny"
unreadable_literal = "deny"
unused_async = "deny"
unused_self = "deny"
unwrap_used = "deny"
use_debug = "deny"
used_underscore_binding = "deny"
used_underscore_items = "deny"
useless_let_if_seq = "deny"
wildcard_dependencies = "deny"
wildcard_imports = "deny"

# Additional lints for LLM-generated code quality
# Catches redundant/inefficient patterns
redundant_clone = "deny"
redundant_pattern_matching = "deny"
redundant_pub_crate = "deny"
str_to_string = "deny"
manual_ok_or = "deny"
manual_map = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"

# Prevents verbose/non-idiomatic code
match_bool = "deny"
needless_for_each = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"

# Memory efficiency and correctness
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
string_lit_as_bytes = "deny"
verbose_file_reads = "deny"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.10"
schemars = { version = "0.8", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
futures = "0.3"
async-trait = "0.1"

# High-performance data structures
dashmap = "6.1"
arc-swap = "1.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "local-time"] }
tracing-log = "0.2"
tracing-opentelemetry = "0.32"
tracing-error = "0.2"
tracing-appender = "0.2"
tracing-test = "0.2"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto"] }

# Web framework (only for api_gateway)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "cors", "limit", "util", "timeout"] }
uuid = { version = "1.19", features = ["serde"] }
governor = "0.10"

# OpenAPI documentation (only for api_gateway)
utoipa = { version = "5.4", features = ["macros", "openapi_extensions", "chrono", "uuid"] }

# Synchronous locks for better performance
parking_lot = "0.12"

# CLI support
clap = { version = "4.5", features = ["derive"] }

# Database (only for db module)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "any", "migrate"] }

# Database utilities
sea-orm = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls", "with-uuid", "with-chrono", "with-rust_decimal", "macros"] }
sea-orm-migration = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# File rotation for logging
file-rotate = "0.8"

# Time handling
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# DSN parsing
dsn = "1.1.1"
humantime = "2.3.0"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Regex for env expansion
regex = "1.10"

# gRPC support
tonic = { version = "0.14", features = ["transport"] }
prost = { version = "0.14" }
tonic-prost = "0.14"

# Protocol buffer compilation (build dependencies)
prost-build = "0.14"
tonic-prost-build = "0.14"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Time handling
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Cryptographic utilities
sha2 = "0.10"
hex = "0.4"

# JWT and authentication
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }

# Configuration management
figment = { version = "0.10", features = ["yaml", "env"] }
inventory = "0.3"

# File system utilities
tempfile = "3"
dirs = "6"

# Decimal handling
bigdecimal = "0.4"
rust_decimal = { version = "1.39", features = ["serde"] }
ryu = "1.0"

# System information
sysinfo = "0.37"
hostname = "0.4"
starship-battery = "0.10"
local-ip-address = "0.6"
machine-uid = "0.5"
nvml-wrapper = "0.11"

# Text processing
base64 = "0.22"
bincode = { version = "2.0", features = ["serde"] }
strsim = "0.11"

# OData support
odata-params = "0.4"

# Procedural macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "printing", "derive", "extra-traits"] }
heck = "0.5"
proc-macro-error2 = "2.0"

# Testing utilities
trybuild = "1"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres", "mysql"] }
httpmock = "0.8"

# Async utilities
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

# Other utilities
once_cell = "1.20"

# HTTP types and web utilities
http = "1.3"
matchit = "0.9"

# Document and file handling
rust-embed = "8"
bytes = "1.5"
mime = "0.3"

# Document parsing libraries
tl = "0.7"
pdf-extract = "0.10"

# Additional testing utilities
tokio-test = "0.4"
temp-env = "0.3"

# Additional utilities
nanoid = "0.4"

# GTS dependencies
jsonschema = "0.18"
walkdir = "2.5"
serde_yaml = "0.9"
shellexpand = "3.1"

# GTS library
gts = { git = "https://github.com/globaltypesystem/gts-rust.git", tag = "v0.7.7" }
gts-macros = { git = "https://github.com/globaltypesystem/gts-rust.git", tag = "v0.7.7" }
