[package]
name = "de0901_gts_string_pattern"
version = "0.1.0"
authors = ["authors go here"]
description = "Validates GTS string patterns in functions and annotations"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "valid_use_cases"
path = "ui/valid_use_cases.rs"

[[example]]
name = "invalid_cases"
path = "ui/invalid_cases.rs"

[[example]]
name = "permission_strings"
path = "ui/permission_strings.rs"

[dependencies]
clippy_utils.workspace = true
dylint_linting.workspace = true
lint_utils.workspace = true
gts.workspace = true

[dev-dependencies]
dylint_testing.workspace = true
gts-macros.workspace = true
serde.workspace = true
serde_json = "1.0"
schemars = "0.8"

[package.metadata.rust-analyzer]
rustc_private = true
